...
      ),
    ]);

    batch.insertAll(db.seats, [
      SeatsCompanion.insert(
        id: uuid.v4(),
        seatNumber: 'A1',
        capacity: 2,
        createdAt: now,
        updatedAt: now,
      ),
      SeatsCompanion.insert(
        id: uuid.v4(),
...
